@@ -9,8 +9,8 @@ class Cerberus::Builder::Maven2
     Dir.chdir @config[:application_root]
     cmd = @config[:builder, :maven2, :cmd] || 'mvn'
     task = @config[:builder, :maven2, :task] || 'test'
-    output = `#{@config[:bin_path]}#{cmd} #{task} 2>&1`
-    @output = add_error_information(output)
+    @output = `#{@config[:bin_path]}#{cmd} #{task} 2>&1`
+    add_error_information
     successful?
   end
 
@@ -18,17 +18,18 @@ class Cerberus::Builder::Maven2
     $?.exitstatus == 0 and not @output.include?('[ERROR] BUILD FAILURE')
   end
 
-  def add_error_information(str)
-    output = ''
+  def add_error_information
+    str = @output
+    @output = ''
     while str =~ / <<< FAILURE!$/
       s = $'
 
       $` =~ /^(.|\n)*Running (.*)$/
       failed_class = $2
-      output << $` << $& << ' <<< FAILURE!'
-      output << "\n" << IO.readlines("#{@config[:application_root]}/target/surefire-reports/#{failed_class}.txt")[4..-1].map{|str| '  ' + str}.join.lstrip   #.gsub('  <<< FAILURE!','')
+      @output << $` << $& << ' <<< FAILURE!'
+      @output << "\n" << IO.readlines("#{@config[:application_root]}/target/surefire-reports/#{failed_class}.txt")[4..-1].map{|str| '  ' + str}.join.lstrip   #.gsub('  <<< FAILURE!','')
       str = s
     end
-    output << str
+    @output << str
   end
 end
